// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/alice/grpc/ext/ext.proto";

package stratumn.alice.grpc.host;

option go_package = "github.com/stratumn/alice/grpc/host;host";

// The host service definition.
service Host {
  // Returns the host ID.
  rpc ID (IdReq) returns (HostId) {
    option (stratumn.alice.grpc.ext.method_desc) = "Display the host's ID";
  }

  // Streams the host addresses.
  rpc Addresses (AddressesReq) returns (stream Address) {
    option (stratumn.alice.grpc.ext.method_desc) = "List all the host's addresses";
  }

  // Connects to a multiaddress.
  rpc Connect (ConnectReq) returns (stream Connection) {
    option (stratumn.alice.grpc.ext.method_desc) = "Ensure there is a connection to this peer";
  }
}

// The ID request message.
message IdReq {
}

// The address request message.
message AddressesReq {
}

// The connect request message.
message ConnectReq {
  bytes address = 1 [
    (stratumn.alice.grpc.ext.field_desc) = "Multiaddress",
    (stratumn.alice.grpc.ext.field_required) = true,
    (stratumn.alice.grpc.ext.field_multiaddr) = true
  ];
}

// The host ID message containing the ID of the host.
message HostId {
  bytes id = 1 [(stratumn.alice.grpc.ext.field_base58) = true];
}

// The address message containing a multiaddress.
message Address {
    bytes address = 2 [(stratumn.alice.grpc.ext.field_multiaddr) = true];
}

// The connection message containing the peer ID and addresses.
message Connection {
    bytes peer_id = 1 [(stratumn.alice.grpc.ext.field_base58) = true];
    bytes local_address = 2 [(stratumn.alice.grpc.ext.field_multiaddr) = true];
    bytes remote_address = 3 [(stratumn.alice.grpc.ext.field_multiaddr) = true];
}
